tests/fixtures/invalid/float_mul_none.py
# Cannot multiply Float and None
x: float = 1.0 * None
